--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "@ionic-native/splash-screen": "~4.20.0",
     "@ionic-native/status-bar": "~4.20.0",
     "@ionic/storage": "2.2.0",
+    "ion2-calendar": "^2.2.0",
     "ionic-angular": "3.9.5",
+    "ionic-calendar-date-picker": "^0.1.2",
+    "ionic2-calendar": "^0.5.4",
     "ionicons": "3.0.0",
+    "moment": "^2.24.0",
     "rxjs": "5.5.11",
     "rxjs-compat": "^6.5.3",
     "sw-toolbox": "3.6.0",
